fix overflow hidden problem in header

--- a/app/scss/_media-queries.scss
+++ b/app/scss/_media-queries.scss
@@ -23,6 +23,10 @@ only screen and (min-resolution: 120dpi)
     margin-top: 120px;
   }
 
+  .sticky-nav a {
+    font-size: 1.1rem;
+  }
+
   // about
   img.who-i-am, img.what-i-do, img.where-i-am {
     height: 115px;
