--- a/app/scss/home/_header.scss
+++ b/app/scss/home/_header.scss
@@ -2,9 +2,7 @@
   height: 825px;
   background: url('../../images/header-image.jpg') #3F7E37 no-repeat center top;
   background-size: auto 825px;
-  nav {
-    overflow: hidden;
-  }
+  overflow: hidden;
 }
 
 .main-nav {
